Fix: UI on mobile & optimize mobile UI

--- a/src/resources/sass/base.sass
+++ b/src/resources/sass/base.sass
@@ -10,10 +10,6 @@ $success-color: #3cb371
 
 $icon-size: 45px
 
-*
-    transition: 2s
-
-
 @mixin flex-center
     display: flex
     justify-content: center
